test to see if the overflow on job.html has been fixed

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -489,6 +489,13 @@ footer {
 
 /* ////////////////////////Mobile design ///////////////////////// */
 @media screen and (max-width: 576px) {
+
+  body{
+    max-width: 100vw;
+   
+  }
+
+
   .btn-team {
     position: static;
   }
